--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>pk.com</groupId>
-  <artifactId>afz-pomodoro</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>AFZ Pomodoro</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>pk.com</groupId>
+	<artifactId>afz-pomodoro</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>AFZ Pomodoro</name>
+
+
+	<dependencies>
+
+	
+		<dependency>
+			<groupId>de.jensd</groupId>
+			<artifactId>fontawesomefx</artifactId>
+			<version>8.8</version>
+		</dependency>
+
+	
+		<dependency>
+			<groupId>com.jfoenix</groupId>
+			<artifactId>jfoenix</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
+		
+
+		
+
+
+	</dependencies>
 </project>
