--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,22 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>AFZ Pomodoro</name>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	<dependencies>
-
-
 		<dependency>
 			<groupId>de.jensd</groupId>
 			<artifactId>fontawesomefx</artifactId>
 			<version>8.8</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>com.jfoenix</groupId>
 			<artifactId>jfoenix</artifactId>
 			<version>1.4.0</version>
 		</dependency>
-
-
-
-
-
 
 	</dependencies>
 </project>
